manipulação do svg

--- a/src/sass/imports/_structure-base.sass
+++ b/src/sass/imports/_structure-base.sass
@@ -140,4 +140,4 @@ body
     max-height: 100%
     overflow: hidden !important
     overflow-x: hidden !important
-    overflow-y: hidden !important
+    overflow-y: scroll !important
