--- a/src/sass/imports/_bulma-connector.sass
+++ b/src/sass/imports/_bulma-connector.sass
@@ -1,7 +1,7 @@
 ////////////////////
 // ALL BULMA VARS //
 ////////////////////
-// $black: #0a0a0a
+$black: $black1
 // $grey-darker: #363636
 // $grey-dark: #4a4a4a
 // $grey: #7a7a7a
@@ -49,7 +49,7 @@ $primary: $color1
 // $danger-invert: findColorInvert($danger)
 // $light-invert: $dark
 // $dark-invert: $light
-$body-background: $grey-1
+$body-background: $white1
 // $background: $grey-lighter
 // $border: $grey-light
 // $border-hover: $grey
