--- a/src/sass/imports/_color-palette.sass
+++ b/src/sass/imports/_color-palette.sass
@@ -1,20 +1,16 @@
-$color1: rgba(30, 195, 204, 1)
-$color2: rgba(242, 87, 87, 1)
-$color3: rgba(242, 232, 99, 1)
-$color4: rgba(242, 205, 96, 1)
-$color5: rgba(234, 242, 227, 1)
+$color1: rgba(255, 0, 0, 1)
 
-$black: rgba(0, 0, 0, 1)
-$black-1: #282727
-$black-2: rgba(0, 0, 0, .5)
-$black-3: rgba(0, 0, 0, .3)
-$black-4: rgba(0, 0, 0, .1)
-$black-5: rgba(0, 0, 0, .05)
+$black1: rgba(0, 0, 0, 1)
+$black2: rgba(0, 0, 0, .5)
+$black3: rgba(0, 0, 0, .3)
+$black4: rgba(0, 0, 0, .1)
+$black5: rgba(0, 0, 0, .05)
 
-$grey: #a29c9b
-$grey-1: #efeded
-$grey-2: #fcfcfc
+$grey1: #282727
+$grey2: #a29c9b
+$grey3: #efeded
+$grey4: #fcfcfc
 
-$white: #FFF
+$white1: rgba(255, 255, 255, 1)
 
 $transparent: rgba(255, 255, 255, 0)
