forumlario de inscrição e inclusão do axios

--- a/src/sass/imports/_bulma-connector.sass
+++ b/src/sass/imports/_bulma-connector.sass
@@ -49,7 +49,7 @@ $primary: $color1
 // $danger-invert: findColorInvert($danger)
 // $light-invert: $dark
 // $dark-invert: $light
-$body-background: $white1
+$body-background: $black1
 // $background: $grey-lighter
 // $border: $grey-light
 // $border-hover: $grey
