--- a/src/sass/imports/_structure-base.sass
+++ b/src/sass/imports/_structure-base.sass
@@ -138,6 +138,6 @@ body
     height: 100%
     min-height: 100%
     max-height: 100%
-    overflow: hidden !important
-    overflow-x: hidden !important
-    overflow-y: scroll !important
+    // overflow: hidden !important
+    // overflow-x: hidden !important
+    // overflow-y: scroll !important
